# fastapi-ecommerce

./: .gitignore  alembic.ini  ecommerce.db  pyproject.toml
app/: auth.py  config.py  database.py  main.py  schemas.py
app/migrations/versions/: 02d0f136fae4_create_search_vector.py  286053de602f_create_categories_and_products_tables.py  914d29ab935f_add_user_model.py  b1dfa22aaad0_initial_migration_for_postgresql.py
app/models/: categories.py  products.py
app/routers/: __init__.py  categories.py  products.py  users.py
